Worked on face lift, had to delete a whole resp bc there was a cyrupt file affecting the deploy.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="hero" id="home">
     <div class="hero__container">
       <h1 class="hero__heading">Welcome.</h1>
-      <p class="hero__discription">I'm Ethan Kupka</p>
+      <p class="hero__description">I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
     </div>
   </div>
 
@@ -73,9 +73,9 @@
         <p>Throughout my career at Cornell College, I have had to be disciplined
           with my time. I have sought to not only excel in class, but athletics
           and work as well. Based on my experience, I have developed skills like
-          leadership, teamwork, and problem-solving that allow me to excel in any
-          task. Cornell's intense "One-Course-at-a-time" block system where a
-          semester's worth of material is covered in a single 18-day course, means
+         <span>leadership</span>, <span>teamwork</span>, and <span>problem-solving</span> that allow me to excel in any
+          task. Cornell's intense <span>"One-Course-at-a-time"</span> block system where a
+          semester's worth of material is covered in a <span>single 18-day course</span>, means
           that I have learned how to deal with a fast-paced learning environment.
         </p>
       </div>
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="box1">
-          <h2>CREATIVE</h2>
+          <h2>CREATOR</h2>
         </div>
       </div>
       <div class="traits__card">
@@ -113,7 +113,7 @@
           <h2>STUDENT</h2>
         </div>
       </div>
-      <div class="traits__card">
+      <div class="traits__card" >
         <div class="Boverlay">
           <div class="trait__text">
             <h3>I'm a team player</h3>As a committee member of the SAAC, a lacrosse teammate,
@@ -137,47 +137,11 @@
           </div>
         </div>
         <div class="box4">
-          <h2>COMMUNICATION</h2>
+          <h2>COMMUNICATOR</h2>
         </div>
       </div>
     </div>
   </div>
-
-  <!-- skills section -->
-  <!--<div class="skills" id="skills">
-    <div class="main__container">
-      <div class="main__content">
-        <h1>My Skills</h1>
-        <h2>As a Beginner</h2>
-        <p>HTML</p>
-        <div class="container">
-          <div class="skill html"><b>65% Proficient</b></div>
-        </div>
-
-        <p>Python</p>
-        <div class="container">
-          <div class="skill python"><b>40% Proficient</b></div>
-        </div>
-
-        <p>Java</p>
-        <div class="container">
-          <div class="skill java"><b>30% Familiar</b></div>
-        </div>
-
-        <p>CSS</p>
-        <div class="container">
-          <div class="skill css"><b>75% Proficient</b></div>
-        </div>
-         <div class="skills__bar">HTML</div>
-         <div class="skills__bar">JAVA</div>
-         <div class="skills__bar">PYTHON</div>
-         <div class="skills__bar">CSS</div> --
-      </div>
-      <div class="main__img2--container">
-        <img src="ImagesHTML/techLogo.png" alt="pic" id="main__img2" />
-      </div>
-    </div>
-  </div> -->
 
   <!-- Projects section -->
   <div class="projects" id="projects">
@@ -187,16 +151,16 @@
       <div class="mySlides fade">
         <div class="projects__container">
           <div class="projects__img3--container">
-            <div class="projects__img3--card">
+            <div class="projects__img3--card" id="first"> 
               <!-- <img src="ImagesHTML/Port.png" alt="pic" id="main__img" /> -->
               <div class="projects__content">
-                <h2>Personal Portfolio</h2>
-                <p><i>'ELKshot'</i> is my own personal portfolio showing my web development skills, figuring out the bones of HTML
-                  and CSS. This website is built off of HTML, CSS and JAVAScript.
+                <h2>Club Blog/Website</h2>
+                <p><i>'C4'</i> is Cornell Colleges own Computer science club where I developed a platform for the community to host 
+                  their thoughts and be upto date on current events using a Bootstrap, HTML, CSS, Sass, JAVAScript and google applications.
                 </p>
-                  <a href="https://elkshot.netlify.app" class="button__cta" target="_blank">Launch</a>
+                  <a href="https://cornellcollegec4.netlify.app/" class="button__cta" target="_blank">Launch</a>
                   <!-- <a href="#home" download="index.html" class="button__cta" target="_blank">Launch</a> -->
-                  <a href="https://github.com/Ekupka1/ELKSHOT.git" class="button__cta" target="_blank">Code</a>
+                  <a href="https://github.com/Ekupka1/CapStone.git" class="button__cta" target="_blank">Code</a>
               </div>
             </div>
           </div>
@@ -206,7 +170,7 @@
       <div class="mySlides fade">
         <div class="projects__container">
           <div class="projects__img3--container">
-            <div class="projects__img3--card">
+            <div class="projects__img3--card" id="second">
               <!-- <img src="ImagesHTML/Port.png" alt="pic" id="main__img" /> -->
               <div class="projects__content">
                 <h2>Artist Brochure</h2>
@@ -226,7 +190,7 @@
       <div class="mySlides fade">
         <div class="projects__container">
           <div class="projects__img3--container">
-            <div class="projects__img3--card">
+            <div class="projects__img3--card" id="third">
               <!-- <div class="projects__img"><img src="ImagesHTML/techLogo.png" alt="pic" id="main__img3" /></div> -->
               <div class="projects__content">
                 <h2>Third Party API (JokeGen)</h2>
@@ -293,12 +257,13 @@
         <div class="footer__logo">
           <a href="#home" id="footer__logo">ELKSHOT</a>
         </div>
-        <p class="website__right">UpToDate 2021. Art by Elk</p>
+        <p class="website__right">UpToDate 2022. Art by Elk</p>
         <div class="social__icons">
           <!-- Needs wifi to see icons // not downloaded-->
-        <a href="mailto:ekupka23@cornellcollege.edu" id="social__icons--links"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:ekupka23@cornellcollege.edu" id="social__icons--links"><i class=" fa-solid fa-basketball fa-bounce fas fa-envelope"></i></a>
         <a href="https://www.linkedin.com/in/ethankupka" id="social__icons--links" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/ekupka1" id="social__icons--links" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="fire.html" id="social__icons--links" target="_blank"><i class="fa fa-fire"></i></a>
         </div>
       </div>
     </div>
