--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="main" id="about">
     <div class="main__container">
       <div class="main__img--container">
-        <div class="main__img--card"><img src="ImagesHTML/Port.png" alt="pic" id="main__img" /></div>
+        <div class="main__img--card" id="1"><img src="ImagesHTML/Port.png" alt="pic" id="main__img" /></div>
       </div>
       <div class="main__content">
         <h1>About</h1>
