Added project fixed a few bugs with smoothness.

--- a/fire.html
+++ b/fire.html
@@ -18,7 +18,7 @@
     <!-- navbar section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="#home" id="navbar__logo">ELKshot</a>
+        <a href="#home" id="navbar__logo" onclick="scrollToTop();return false;">ELKshot</a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <!-- first child -->
           <span class="bar"></span> <!-- second child -->
@@ -73,7 +73,7 @@
     </video>
     <div class="intro_text">
     <h1>
-      <a href="" class="typewrite" data-period="2000" data-type='[ "You Found The Easter Egg!", "Enjoy the fire as you look over the resume :)", "", ""]'>
+      <a class="typewrite" data-period="2000" data-type='[ "You Found The Easter Egg!", "Enjoy the fire as you look over the resume :)", "", ""]'>
         <span class="wrap"></span>
       </a>
     </h1>
@@ -85,9 +85,9 @@
     <div class="social__media">
       <div class="social__media--wrap">
         <div class="footer__logo">
-          <a href="#home" id="footer__logo">ELKSHOT</a>
+          <a href="#home" id="footer__logo" onclick="scrollToTop();return false;">ELKSHOT</a>
         </div>
-        <p class="website__right">UpToDate 2022. Art by Elk</p>
+        <p class="website__right">UpToDate 2023. Art by Elk</p>
         <div class="social__icons">
           <!-- Needs wifi to see icons // not downloaded-->
         <a href="mailto:ekupka23@cornellcollege.edu" id="social__icons--links"><i class="fas fa-envelope"></i></a>
