--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="#projects" class="navbar__links" id="home-page">Projects</a>
         </li>
         <li class="navbar__btn">
-          <a href="ImagesHTML/Ethan Kupka __ Res23.pdf" class="button" id="home-page" target="_blank">Resume</a>
+          <a href="ImagesHTML/Ethan Kupka __ Res24 __ WD.pdf" class="button" id="home-page" target="_blank">Resume</a>
         </li>
       </ul>
     </div>
@@ -92,6 +92,7 @@
     </div>
   </div>
 
+  <div class="wrapper">
   <!-- traits section -->
   <div class="traits" id="traits">
     <h1>My Traits</h1>
@@ -107,7 +108,7 @@
           </div>
         </div>
         <div class="box1">
-          <h2>CREATOR</h2>
+          <h2>CREATIVE</h2>
         </div>
       </div>
       <div class="traits__card">
@@ -147,11 +148,12 @@
           </div>
         </div>
         <div class="box4">
-          <h2>COMMUNICATOR</h2>
+          <h2>COMMUNICATION</h2>
         </div>
       </div>
     </div>
   </div>
+</div>
 
   <!-- Projects section -->
   <div class="projects" id="projects">
