--- a/fire.html
+++ b/fire.html
@@ -62,14 +62,14 @@
         display: flex;
         align-items: center;
         position: absolute;
-        top: 40%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 1;
       }
     </style>
     <video id="background-video" autoplay loop muted>
-      <source src="ImagesHTML/fire.mp4" type="video/mp4" />
+      <source src="ImagesHTML/fire2.mp4" type="video/mp4" />
     </video>
     <div class="intro_text">
     <h1>
