Added new resume to hyper link

--- a/fire.html
+++ b/fire.html
@@ -30,7 +30,7 @@
             <a href="index.html" class="navbar__links" id="home-page">Main</a>
           </li>
           <li class="navbar__btn">
-            <a href="ImagesHTML/Ethan Kupka __ Res24 __ WD.pdf" class="button" id="home-page" target="_blank">Resume</a>
+            <a href="ImagesHTML/Ethan Kupka __ Res25 __ Main.pdf" class="button" id="home-page" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
