--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="#projects" class="navbar__links" id="home-page">Projects</a>
         </li>
         <li class="navbar__btn">
-          <a href="ImagesHTML/Ethan Kupka __ Res24 __ WD.pdf" class="button" id="home-page" target="_blank">Resume</a>
+          <a href="ImagesHTML/Ethan Kupka __ Res25 __ Main.pdf" class="button" id="home-page" target="_blank">Resume</a>
         </li>
       </ul>
     </div>
